--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@ border: 1px solid #000000;
 padding: 5px;
 font-size: 1.2em;
 }
+
+.noto-sans-jp-<uniquifier> {
+  font-family: "Noto Sans JP", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}
