--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Noto Sans JP", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
+  font-size: 1.1em;
   font-style: normal;
 }
 
