--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ border: 1px solid #000000;
 padding: 5px;
 font-size: 1.2em;
 }
+p{
+margin: 10px 0px 10px 0px;
+}
 #id{
-text-align: left;
+margin: 10px 0px 10px 900px;
 }
